	
	FIM NEWS -- history of main user-visible changes in FIM.

                Version 0.6-trunk

# (r1781)
 * Bugfix: Autocommand "PostHardcodedConfigLoading" will now trigger even execute even if --disable-fimrc
# (r1771-r1773,r1776-r1777,r1781,r1783)
 * internal: considerably expanded 'make tests'.
# (r1770,r1772)
 * Add command 'stderr', similar to 'stdout'.
# (r1739,TODO)
 * This is the last FIM version supporting the C++03 standard.
# (r1731)
 * Refresh configure and Makefile templates.
# (r1729)
 * Build fixes for the MinGW environment.
# (r1752)
 * man fim: improve manual contents (on ~/.fim_history, etc.).
# (r1727)
 * man fimrc: added a section with default aliases,
# (r1724,r1738)
 * If possible, use 'timeout' in 'make tests'.
# (r1718-r1720,r1726,r1777-r1780)
 * Switch -K aka --chars-press <chars> simulates input of characters at startup.
# (r1709,r1710)
 * Fix: Slideshow function (e.g. `fim --slideshow=5 media/`) will now cycle forever, unless --once/-1 option specified (as in fbi).
# (r1707,r1711)
 * Fix: after 'quit' no command shall execute anymore (unless in -F).
# (r1705,r1759-r1760)
 * With SDL one can specify window size as percentage of allowed size (-o sdl=w55%), or draw a help grid map (-o sdl=h).
# (r1700)
 * With SDL (-o sdl), center window by default.
# (r1693)
 * fix: pressing keys "1n1n" will not execute 'n' 11 times but twice.
# (r1689)
 * configure --enable-debug is developer option now.
# (r1679-r1688,r1721-r1722,r1753-r1758,r1760,r1772)
 * libcaca (-o caca) mode is now working and is the default ASCII Art mode.
# (r1677,r1678,r1725)
 * Slideshow function (e.g `fim --slideshow=5 *.jpg`) now more responsive.
# (r1662)
 * Arrow keys are now working in aalib (-o aa).
# (r1649)
 * Bugfix with aalib (-o aa): don't truncate long lines.
# (r1641)
 * Avoid leak in language parser.
# (r1644-r1646)
 * Avoid console buffer memory corruption.
# (r1626)
 * Eliminate a memory leak from file loading code. 
# (r1625,r1637,r1657,r1658,r1661,r1665,r1666)